# speedKG

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Gaps_In_V1.md  Prompt copy.txt  Prompt.txt  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  run_ui.sh
.streamlit/: config.toml
docs/: architecture.md  data_model.md  walkthrough.md
evals/: README.md  compare_results.py  cypher_generation.json  iteration_log.md  run_evals.py  test_queries.json
scripts/: ingest_data.py  test_api_key.py
src/: __init__.py
src/domain/: __init__.py  actors.py  cameo.py  events.py
src/ingestion/: __init__.py  cameo_parser.py  csv_parser.py  neo4j_loader.py  schema_validator.py
src/intelligence/: __init__.py  agent.py  cypher_gen.py  graph_retrieval.py  intent_classifier.py  reasoning.py  state.py
src/ui/: README.md  __init__.py  app.py
src/ui/components/: __init__.py  chat.py  sidebar.py  trace_view.py
src/utils/: config.py  logging.py
tests/: __init__.py
tests/integration/: test_neo4j_loader.py
tests/unit/: test_cameo_parser.py  test_csv_parser.py
